welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: ')' expected but ';' found.
do{ anvance();} while (estSurBlanc();) 
                                    ^Program:2: error: illegal start of statement
do{ anvance();} while (estSurBlanc();) 
                                     ^